--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/redux-logger": "^3.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
